refactor: migrate to JBCT local record pattern
- Convert 6 *Impl classes to local records in interfaces
- Convert 13 inner classes to records
- Migrate BlueprintKey/Value to SliceTargetKey/Value
- Fix all JBCT review issues (null policy, thread safety, naming)
- Add factory methods following TypeName.typeName() convention
- Replace magic numbers with computed PREFIX.length()
- Convert NoOp implementations to private nested records

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>